# closet-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
models/: gen.py  pyproject.toml
src/: clip_image_processor.rs  image_processor.rs  main.rs
